# gobject-introspection-test

./: CMakeLists.txt  find-girepository.c  glib-print.c  vcpkg.json
